--- a/estudarlinguas.html
+++ b/estudarlinguas.html
@@ -55,7 +55,7 @@
             <div class="frances">
                 <h1>FRANCÊS</h1>
                 <p>Sempre achei francês uma língua muito charmosa, mas nunca tive realmente a chance de aprender até recentemente, pois sempre dei prioridade aos idiomas
-                    meu hiperfoco, como mandarim e coreano. Atualmente faço um curso de francês no CLING.
+                   que são meu hiperfoco, como mandarim e coreano. Atualmente faço um curso de francês no CLING.
                 </p>
             </div>
         </div>
